Styling fixes. Images not stretched. Among other things.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -163,7 +163,7 @@ h1.title{
 p.description{
   position: absolute;
   padding: 7px;
-  top: 12%;
+  top: 17%;
   color: white;
   font-size: 70%;
   margin: 3px;
@@ -201,7 +201,7 @@ img.movie-poster{
   max-height: 125px;
   width: auto;
   height: auto;
-  min-width: 60%;
+  min-width: 55%;
   min-height: 70%;
   padding: 10px;
   margin-left: 10px;
@@ -451,7 +451,7 @@ nav{
   display: flex;
   z-index: 13;
   width: 100%;
-  height: 10%;
+  height: 8%;
   opacity: .93;
   position: fixed;
   top: 0%;
@@ -607,13 +607,15 @@ h1.splash{
 button.login{
   position: fixed;
   top: 1%;
-  right: 18%;
+  right: 11%;
+
 }
 
 button.signup{
   position: fixed;
   top: 1%;
-  right: 3%;
+  right: 1%;
+
 }
 
 
